--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans';
 }
 .header{
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.911);
     font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans';
 }
 /*------COPY--------*/
